# deaddrop

./: .gitignore  .gitmodules  Dockerfile  INTEGRATION_GUIDE.md  README.md  cargo.toml  docker-compose.yml  package-lock.json  package.json  submitted_data.json
deadbug/: Cargo.toml  funkeys.txt  funkeys_pke.txt  readme.md  script.sh
deadbug/detector/: Cargo.toml
deadbug/detector/src/: bb.json  detector.rs  lib.rs  main.rs
deadbug/receiver/: Cargo.toml  build.rs
deadbug/receiver/proto/: common.proto
deadbug/receiver/src/: common_proto.rs  lib.rs  main.rs  receiver.rs  types.rs
deadbug/rust_omr/: Cargo.toml
deadbug/rust_omr/src/: detector.rs  http_client.rs  lib.rs  main.rs  protocol.rs  receiver.rs  setup.rs  submitter.rs  types.rs
deadbug/submitter/: Cargo.toml  gen_attestation.py
deadbug/submitter/bug/: bug_report.sol
deadbug/submitter/src/: gen_attestation.py  main.rs  run_test.sh  submitter.rs
deadbug/submitter/test/: block_num.txt  bug_report.sol  contract_addr.txt  test_example.sol
deadbug/utils/: Cargo.toml
deadbug/utils/src/: aes.rs  db.rs  hashing.rs  lib.rs  pke.rs
frontend/: README.md  app.py  dummy-input-to-detector.json  dummy.json  models.py
frontend-old/: package.json  tailwind.config.js
frontend-old/src/app/: layout.tsx  page.tsx
frontend-old/src/components/: Navigation.tsx
frontend/templates/: all_bug_reports.html  base.html  bug_lookup.html  entry_detail.html  list.html  register.html  submit_bug.html
src/app/: page.tsx
src/app/about/: page.tsx
src/app/dashboard/: page.tsx
src/app/home/: page.tsx
(+5 files in other folders)
