[package]
name = "deadbug_receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer      = "0.10"
hex = "0.4"
rust_omr = {path = "../rust_omr", version = "0.1.0"}
utils = {path = "../utils", version = "0.1.0"}
submitter = {path = "../submitter", version = "0.1.0"}

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"
