[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
block-padding = "0.2"
rand = "0.8"
hex = "0.4"
age = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_omr = { path = "../rust_omr", version = "0.1.0" }